# ImageRotationNearestNeighborCpp

./: CMakeLists.txt  README.md
app/: main.cpp
